Lesson3/BONUS/password-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password
  template:
    metadata:
      labels:
        app: password
    spec:
      containers:
        - name: password
          image: khjomaa/db-creds-nginx:latest
          resources:
            limits:
              memory: 128Mi
              cpu: 250m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secret-volume
              mountPath: /usr/share/nginx/html/creds
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: db-creds
            items:
              - key: db_password
                path: creds.txt
---
apiVersion: v1
kind: Service
metadata:
  name: password-svc
spec:
  selector:
    app: password
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
