Lesson3/BONUS/db-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: db-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mysql.services.com
      http:
        paths:
          - path: /username
            backend:
              serviceName: username-svc
              servicePort: 80
          - path: /password
            backend:
              serviceName: password-svc
              servicePort: 80
          - path: /url
            backend:
              serviceName: url-svc
              servicePort: 80
